Remi_Hasan/src/test/resources/qls/InvalidStylesheets/SimpleFormUnplacedFields.qls
stylesheet simpleForm
{
  page Page1
  {
    section "All Questions but someInteger and someBoolean"
    {
      question someDecimal
      question someDate
      question someMoney
      question someString
    }
  }
}